# amplifier-module-tool-comfyui

./: .gitignore  README.md  pyproject.toml
ai_working/: next-steps.md
docs/: WORKFLOWS.md
examples/: bundle.md
src/amplifier_module_tool_comfyui/: __init__.py  client.py  models.py  tool.py
src/amplifier_module_tool_comfyui/workflows/: __init__.py  base.py  controlnet.py  img2img.py  inpaint.py  ip_adapter.py  outpaint.py  sdxl.py  txt2img.py  txt2img_lora.py  upscale.py  upscale_esrgan.py
