[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-tool-comfyui"
version = "0.1.0"
description = "Amplifier tool module for image generation via ComfyUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "robotdad" }
]
keywords = ["amplifier", "comfyui", "image-generation", "stable-diffusion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "amplifier-core>=0.1.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.entry-points."amplifier.modules"]
comfyui = "amplifier_module_tool_comfyui:mount"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_module_tool_comfyui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
